Changelog
=========

2.5 - unreleased
----------------

- Fixed the language selector tests to pass in Plone 3.3.
  [hannosch]

- Removed empty translation from translate menu description.
  [hannosch, maurits]

- Added smarter handling of language independent reference fields. If a
  language independent reference field points to a target, the translations of
  that source item will point to the translations of the target and not the
  canonical target. This will only work if the translations of the target
  already exist once the reference is established. If translations of the
  target are later added, the canonical source needs to be saved again to
  adjust the references to the right translation of the target.
  [hannosch]

- Added tests for language in-/dependent reference fields.
  [hannosch]

- Allow the query keys which prevent the automatic addition of the language to
  catalog queries be configured through a NOFILTERKEYS list in config.
  [hannosch]

2.4 - Dec 9, 2008
-----------------

- Removed `Language settings` from the `Translate into` menu. A global action
  has no place in a context specific menu.
  [hannosch]

- Remove the useless 'changeLanguage' script. In
  'manage_translations_form', use '@@translate' instead.
  [nouri]

- Allow 'id' to be passed to addTranslation/createTranslation.
  [nouri]

2.3 - Nov 13, 2008
------------------

- Registered NoCopyReferenceAdapter for translationOf relations on
  iterate checkout to avoid the checked out object becoming the
  translation.
  [tesdal]

- Fixed unneeded AlreadyTranslated exception during a schema update.
  A schema update saves the current value, sets the default language
  (at which point there can easily be two English translations if that
  is the default language) and restores the original value again. So
  really there is no reason for doing anything other than setting the
  value in that case.
  [maurits]

- addTranslation now returns the newly created translation.
  [wichert]
